--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="toast_logout">Logout success..</string>
     <string name="toast_undone">Unfinished item(s)..</string>
     <string name="toast_up">Please finish the first order..</string>
+    <string name="toast_confirm">The Food Has Been Confirmed</string>
 
 
     <!--labels-->
@@ -18,6 +19,8 @@
     <string name="label_ingredient">Ingredient</string>
     <string name="label_table">Table</string>
     <string name="label_grams">Grams</string>
+    <string name="label_no_food">No food has been ordered yet</string>
+
 
 
     <!--hints-->
@@ -43,7 +46,6 @@
     <!--drawers-->
     <string name="drawer_developed_by">Developed by Jasuke Squad</string>
     <string name="drawer_about_us">About Us</string>
-    <string name="label_no_food">No food has been ordered yet</string>
 </resources>
 
 
